--- a/sat/requirements.txt
+++ b/sat/requirements.txt
@@ -1,7 +1,7 @@
 SwissArmyTransformer==0.4.12
 omegaconf==2.3.0
-torch==2.4.0
-torchvision==0.19.0
+#torch==2.4.0
+#torchvision==0.19.0
 pytorch_lightning==2.3.3
 kornia==0.7.3
 beartype==0.18.5
